ingress-controller/ingress-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-user-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontendservice
            port:
              number: 80
  - host: dashboard.example.com
    http:
      paths:
      - path: /backoffice
        pathType: ImplementationSpecific
        backend:
          service:
            name: frontendservice
            port:
              number: 80
  - host: api.example.com
    http:
      paths:
      - path: /user
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-app-service
            port:
              number: 80
      - path: /items
        pathType: ImplementationSpecific
        backend:
          service:
            name: items-app-service
            port:
  tls:
  - hosts:
    - example.com
    secretName: userapi-tls
              number: 80
